--- a/home/index.html
+++ b/home/index.html
@@ -3,11 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HIBA</title>
+    <title>Hiba</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header style="background-color: aquamarine;">
-        
-    </header>
+    <section>
+        <nav>
+            <img src="icon/Votre_texte_de_paragraphe__1_-removebg-preview.png" alt="My logo" class="logo">
+            <ul>
+                <li>About me</li>
+                <li>Services</li>
+                <li>log/blog</li>
+                <li>contact</li>
+            </ul>
+        </nav>
+        <p>welcome to my website</p>
+        <div>
+            <div class="followme">
+                <p>follow me</p>
+                <img src="icon/ICON/TikTok-Logo-2016-present-removebg-preview.png" alt="tiktok logo">
+                <img src="icon/Design sans titre.png" alt="instegram logo">
+           </div>
+           <div class="hi">
+                <p>HI..! I'm <span>HIBA</span> </p>
+           </div>
+        </div>
+        <img src="icon/Votre_texte_de_paragraphe__2_-removebg-preview.png" alt="scroll icon">
+    </section>
 </body>
 </html>
